@@ -1,7 +1,5 @@
 package com.napier.sem;
 
-import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -20,10 +18,12 @@ public class QueryParser implements IQueryParser {
     public List<Map<String, String>> ParseQueries(String pathToQueries) throws IOException {
         Path file = Paths.get(pathToQueries);
         String queryFileContent = new String(Files.readAllBytes(file));
+        if (queryFileContent.length() != 0){
+            List<String> queries = List.of(queryFileContent.split("\n\n"));
+            return SplitAllParsedQueries(queries);
+        }
 
-        List<String> queries = List.of(queryFileContent.split("\n\n"));
-
-        return SplitAllParsedQueries(queries);
+        return Collections.emptyList();
     }
 
     private List<Map<String, String>> SplitAllParsedQueries(List<String> queries){
@@ -38,9 +38,10 @@ public class QueryParser implements IQueryParser {
 
     private Map<String, String> SplitQueryFromName(String query){
         String[] splitQuery = query.split("\n", 2);
+        String cleanedQueryName = splitQuery[0].substring(2, splitQuery[0].length() - 2);
 
         return Map.ofEntries(
-                entry("queryName", splitQuery[0]),
+                entry("queryName", cleanedQueryName),
                 entry("query",splitQuery[1])
         );
     }
